--- a/static/index.html
+++ b/static/index.html
@@ -12,16 +12,17 @@
     <span id="spinner"></span> 
     <!-- Switched from class to Id since the spinner was permenantly disappearing as a class when the loading was completed -->
 </div>
-<h2>Stocks</h2>
-<p>
+<!--<h1>Stocks</h1> 
+    <p>
     <a href="/stocks">GET DATA</a>    
-</p>
+</p> -->
 
 <div id="values"></div> 
-<div id="stocksymbols"></div>
+<!-- <div id="stocksymbols"></div> -->
 
 <canvas id="chart" width="1000" height="600"></canvas>
-
+<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 <script src="scripts.js" defer></script>
 </body>
 </html>
