Graph is in correct Position

--- a/static/index.html
+++ b/static/index.html
@@ -21,8 +21,9 @@
 <!-- <div id="stocksymbols"></div> -->
 
 <canvas id="chart" width="1000" height="600"></canvas>
-<canvas id="myChart" style="width:100%;max-width:600px"></canvas>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
+<!-- <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script> -->
 <script src="scripts.js" defer></script>
 </body>
 </html>
