--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 </head>
 <body>
-<h1>Henry Khoo's Stonks</h1>
+<h1>Henry Khoo's Stocks Program</h1>
 <div>
     <span id="spinner"></span> 
     <!-- Switched from class to Id since the spinner was permenantly disappearing as a class when the loading was completed -->
