Final Comments Made Program IS FINISHED

--- a/static/index.html
+++ b/static/index.html
@@ -8,23 +8,25 @@
 </head>
 <body>
 <h1>Henry Khoo's Stocks Program</h1>
+<!-- Header for the web page -->
 <div>
     <span id="spinner"></span> 
+    <!-- Spinner puts a spinner character on the screen and rotates it until the data has been loaded -->
     <!-- Switched from class to Id since the spinner was permenantly disappearing as a class when the loading was completed -->
 </div>
 
 <div id="values"></div> 
+<!-- This holds the data string produced by Scripts to JS and presents it to the web page -->
 
+<canvas id="chart" width="1000" height="600"></canvas>
+<!-- This presents the chart to the web page -->
 
-<canvas id="chart" width="1000" height="600">
-
-</canvas>
 
 <script src="scripts.js" defer></script>
 </body>
 </html>
 
-
+<!-- Scrapped Code(Old Code/Iterations on making the final code) -->
 <!--<h1>Stocks</h1> 
     <p>
     <a href="/stocks">GET DATA</a>    
